Fix for bug 137295; work around a bug in Mac OS X that causes bad drawing of images with 1-bit masks when the destination port has a non-empty clip region. r=pinkerton, sr=beard.